--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-BYBIT_API_KEY=
-BYBIT_API_SECRET=
+API_KEY=NLQzi1wgwNuKUYacin
+API_SECRET=jxXXdPQjHFAjUG0CO8oNP1gHrqQEUllFb7ei
+BASE_URL=https://api.bybit.com
